--- a/GAME3015_A3_Woo_Chaewan/GAME3015_A3/GAME3015_A3.vcxproj.filters
+++ b/GAME3015_A3_Woo_Chaewan/GAME3015_A3/GAME3015_A3.vcxproj.filters
@@ -16,21 +16,18 @@
     <Filter Include="Source Files">
       <UniqueIdentifier>{63bdc2fe-fe06-4be2-8b6f-f8d9ac154dbf}</UniqueIdentifier>
     </Filter>
+    <Filter Include="SceneNode">
+      <UniqueIdentifier>{ef49cad4-92c1-4402-8893-4e66653f5548}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="main.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="Aircraft.cpp">
-      <Filter>Logic</Filter>
-    </ClCompile>
     <ClCompile Include="Command.cpp">
       <Filter>Logic</Filter>
     </ClCompile>
     <ClCompile Include="CommandQueue.cpp">
-      <Filter>Logic</Filter>
-    </ClCompile>
-    <ClCompile Include="Entity.cpp">
       <Filter>Logic</Filter>
     </ClCompile>
     <ClCompile Include="FrameResource.cpp">
@@ -39,19 +36,7 @@
     <ClCompile Include="Game.cpp">
       <Filter>Logic</Filter>
     </ClCompile>
-    <ClCompile Include="Missile.cpp">
-      <Filter>Logic</Filter>
-    </ClCompile>
     <ClCompile Include="Player.cpp">
-      <Filter>Logic</Filter>
-    </ClCompile>
-    <ClCompile Include="SceneNode.cpp">
-      <Filter>Logic</Filter>
-    </ClCompile>
-    <ClCompile Include="SpriteNode.cpp">
-      <Filter>Logic</Filter>
-    </ClCompile>
-    <ClCompile Include="World.cpp">
       <Filter>Logic</Filter>
     </ClCompile>
     <ClCompile Include="Common\Camera.cpp">
@@ -93,17 +78,23 @@
     <ClCompile Include="TitleState.cpp">
       <Filter>Logic</Filter>
     </ClCompile>
-    <ClCompile Include="Component.cpp">
-      <Filter>Logic</Filter>
+    <ClCompile Include="Aircraft.cpp">
+      <Filter>SceneNode</Filter>
     </ClCompile>
-    <ClCompile Include="Container.cpp">
-      <Filter>Logic</Filter>
+    <ClCompile Include="Entity.cpp">
+      <Filter>SceneNode</Filter>
+    </ClCompile>
+    <ClCompile Include="Missile.cpp">
+      <Filter>SceneNode</Filter>
+    </ClCompile>
+    <ClCompile Include="SpriteNode.cpp">
+      <Filter>SceneNode</Filter>
+    </ClCompile>
+    <ClCompile Include="SceneNode.cpp">
+      <Filter>SceneNode</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="Aircraft.hpp">
-      <Filter>Logic</Filter>
-    </ClInclude>
     <ClInclude Include="Category.hpp">
       <Filter>Logic</Filter>
     </ClInclude>
@@ -113,28 +104,13 @@
     <ClInclude Include="CommandQueue.h">
       <Filter>Logic</Filter>
     </ClInclude>
-    <ClInclude Include="Entity.hpp">
-      <Filter>Logic</Filter>
-    </ClInclude>
     <ClInclude Include="FrameResource.h">
       <Filter>Logic</Filter>
     </ClInclude>
     <ClInclude Include="Game.hpp">
       <Filter>Logic</Filter>
     </ClInclude>
-    <ClInclude Include="Missile.h">
-      <Filter>Logic</Filter>
-    </ClInclude>
     <ClInclude Include="Player.h">
-      <Filter>Logic</Filter>
-    </ClInclude>
-    <ClInclude Include="SceneNode.hpp">
-      <Filter>Logic</Filter>
-    </ClInclude>
-    <ClInclude Include="SpriteNode.h">
-      <Filter>Logic</Filter>
-    </ClInclude>
-    <ClInclude Include="World.hpp">
       <Filter>Logic</Filter>
     </ClInclude>
     <ClInclude Include="Common\Camera.h">
@@ -185,11 +161,20 @@
     <ClInclude Include="TitleState.h">
       <Filter>Logic</Filter>
     </ClInclude>
-    <ClInclude Include="Component.h">
-      <Filter>Logic</Filter>
+    <ClInclude Include="Aircraft.hpp">
+      <Filter>SceneNode</Filter>
     </ClInclude>
-    <ClInclude Include="Container.h">
-      <Filter>Logic</Filter>
+    <ClInclude Include="Entity.hpp">
+      <Filter>SceneNode</Filter>
+    </ClInclude>
+    <ClInclude Include="Missile.h">
+      <Filter>SceneNode</Filter>
+    </ClInclude>
+    <ClInclude Include="SpriteNode.h">
+      <Filter>SceneNode</Filter>
+    </ClInclude>
+    <ClInclude Include="SceneNode.hpp">
+      <Filter>SceneNode</Filter>
     </ClInclude>
   </ItemGroup>
 </Project>
